--- a/Dockerfile-sender
+++ b/Dockerfile-sender
@@ -81,6 +81,12 @@ RUN curl -o "rsync.rpm" -L "http://mirror.centos.org/centos/7/os/x86_64/Packages
 RUN rpm -Uvh "rsync.rpm"
 RUN curl -o "git.rpm" -L "http://mirror.centos.org/centos/7/updates/x86_64/Packages/git-1.8.3.1-12.el7_4.x86_64.rpm"
 RUN rpm -Uvh "git.rpm"
+RUN curl -o "apr-util.rpm" -L "http://mirror.centos.org/centos/7/os/x86_64/Packages/apr-util-1.5.2-6.el7.x86_64.rpm"
+RUN rpm -Uvh --nodeps "apr-util.rpm"
+RUN curl -o "apr.rpm" -L "http://mirror.centos.org/centos/7/os/x86_64/Packages/apr-1.4.8-3.el7.x86_64.rpm"
+RUN rpm -Uvh --nodeps "apr.rpm"
+RUN curl -o "httpd-tools.rpm" -L "http://mirror.centos.org/centos/7/os/x86_64/Packages/httpd-tools-2.4.6-67.el7.centos.x86_64.rpm"
+RUN rpm -Uvh "httpd-tools.rpm"
 RUN rm *.rpm
 	
 RUN git clone https://github.com/pocthps/new.git
