--- a/Dockerfile-receiver
+++ b/Dockerfile-receiver
@@ -84,7 +84,7 @@ RUN rpm -Uvh "git.rpm"
 RUN rm *.rpm
 	
 RUN git clone https://github.com/pocthps/new.git
-RUN find ./ -name Receiver*.jar -exec cp {} ./root.jar \;
+RUN find ./ -name Reciever*.jar -exec cp {} ./root.jar \;
 EXPOSE 7000
 RUN chmod u+x /home/java-app/root.jar
 	
